--- a/main.css
+++ b/main.css
@@ -14,6 +14,11 @@ body{
 	width: auto;
 }
 
+.headerPic{
+	height: 15vh;
+	width: auto;
+}
+
 #headerText{
 	color: orange;
 	float: right;
@@ -32,6 +37,3 @@ body{
 	color:white;
 }
 
-.testing{
-	display: inline-block;
-}
